# metabolomics-ml-curriculum

./: .gitignore  CLAUDE.md  PROGRESS.md  README.md  pyproject.toml  requirements.txt
claude/: coding-partner.md  curriculum.md  knowledge_state.md
envs/dreams-env/: main.py  pyproject.toml
section01_pytorch_basics/: README.md  section01_mlp_pytorch_on_ESol_data.ipynb
section02_lightning_massspecgym/: README.md  REVIEW.md  section02_lightning_massspecgym.ipynb
section02_spectral_encoder_gnps/: README.md  section02_spectral_encoder_gnps.ipynb
section03_retrieval_shortcut_baselines/: README.md  REVIEW.md  section03_retrieval_shortcut_baselines.ipynb
week01_pytorch_basics/: README.md  week01_mlp_pytorch_on_ESol_data.ipynb  week01_pytorch_basics.ipynb
