[project]
name = "metabolomics-ml-curriculum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=5.0.0",
    "jupyter>=1.1.1",
    "matchms>=0.33.1",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "rdkit>=2026.3.3",
    "scikit-learn>=1.7.2",
    "torch>=2.12.1",
    "wandb>=0.28.0",
]
