[project]
name = "metabolomics-ml-curriculum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "datasets",
    "ijson",
    "jupyter",
    "massspecgym>=1.2.2",
    "matchms",
    "matplotlib",
    "numpy",
    "pandas",
    "rdkit",
    "scikit-learn",
    "torch",
    "wandb",
]
