[project]
name = "metabolomics-ml-curriculum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "datasets",
    "ijson",
    "jupyter",
    "massspecgym",
    "matchms",
    "matplotlib",
    "numpy",
    "pandas",
    "rdkit",
    "scikit-learn",
    "setuptools==75.8.0",
    "torch",
    "wandb",
]

[tool.uv]
override-dependencies = ["wandb>=0.18"]

[tool.uv.sources]
# Pinned to the MassSpecGym v1.5 merge commit (feat/massspecgym-v1.5, merged 2026-05-08).
# Never cut as a PyPI release; pinning an exact commit keeps it reproducible like a tag would.
massspecgym = { git = "https://github.com/pluskal-lab/MassSpecGym.git", rev = "f259fe3780d5bd227fc6ece36ce6f397c2eef716" }
